Bug 295239 - Missing scheduled transactions in reports.
Summary: Missing scheduled transactions in reports.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Cristian Oneț
URL:
Keywords:
: 299910 338836 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-03 05:51 UTC by kdemeoz
Modified: 2017-07-01 10:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
attachment-12501-0.html (3.03 KB, text/html)
2014-07-29 08:35 UTC, kdemeoz
Details
attachment-18686-0.html (2.76 KB, text/html)
2014-07-29 11:00 UTC, kdemeoz
Details
Testfile for this issue. (7.67 KB, application/pgp-encrypted)
2014-07-30 12:34 UTC, Cristian Oneț
Details
Unencrypted testfile. (27.07 KB, text/xml)
2014-07-30 12:42 UTC, Cristian Oneț
Details
attachment-24004-0.html (2.62 KB, text/html)
2014-07-31 06:02 UTC, kdemeoz
Details
attachment-27580-0.html (3.73 KB, text/html)
2014-07-31 08:10 UTC, kdemeoz
Details
attachment-19849-0.html (4.18 KB, text/html)
2014-08-23 02:14 UTC, kdemeoz
Details
attachment-25918-0.html (1.80 KB, text/html)
2014-08-23 07:51 UTC, kdemeoz
Details
attachment-26769-0.html (1.75 KB, text/html)
2014-08-23 08:20 UTC, kdemeoz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kdemeoz 2012-03-03 05:51:37 UTC
Hi, this Bug is being logged here in Bugzilla after being canvassed [same Subject line as "Summary" above] at http://forum.kde.org/viewtopic.php?f=69&t=98961&p=214668#p214668 .   

Member "otacon" originally posted "Hi, I'm using KMyMoney 4.6.1. I defined various scheduled transactions with a monthly due date, but when I open "Income and Expenses Forecast This Year" or any other report, these transaction are not listed at all or on a very irregular basis, for example in Jan and Dec although it is a monthly scheduled transaction."

Otacon subsequently posted this associated XML file; https://gist.github.com/1753776 ... & these graphics: http://ompldr.org/vY3I4dQ  ,   http://ompldr.org/vY3I4cA  ,   http://ompldr.org/vY3I4bw  .

There was some level of confusion for others to interpret otacon's actual problem. Meanwhile independently i had also discovered the same problem, & so i posted this detail:

"I would like to add comments wrt my own problems experienced with KMM's Forecast Reports. I use KMM v4.6.2 [KDE 4.8.00, Win7]. For me, the misbehaviour of the Forecast Reports appears to be identical to the symptoms already described by otacon... however i shall include some other info here in the hope that some of the difficulties previously expressed by cristian & mkae about understanding otacon's concerns, might be clarified now.

1. I use the "Forecast Method; Scheduled & Future Transactions" setting in "Configure - KMM".
2. I have setup a detailed Scheduled Transactions list, comprising multiple Expenses & Incomes with various Weekly, Fortnightly, Monthly, Quarterly & Annual frequencies.
3. As far as I can tell, the Forecast tab seems to correctly project my various Account future balances correctly based on the “Scheduled” Forecast Method.
4. I created an Annual Budget based on Forecast, & as far as I can tell [in the Budgets tab] it also seems to correctly project my various individual future Expenses & Incomes items correctly based on my “Scheduled Transactions” list.
5. When I run the Report for Yearly Budget, based on this Annual Budget from Forecast, it seems to show all the correct individual Expenses & Incomes items at the correct frequency intervals as per my Schedule.
6. However, every time that I run the “Forecast By Month” [Income & Expenses] or “Income and Expenses Forecast This Year” reports, just like I believe otacon also experienced, the output is demonstrably wrong. Specifically it omits not all, but *most*, of the scheduled Income & Expenses items. Here’s a representative example: my salary is scheduled Monthly, but both these “Forecast” Reports simply show “$0” for each month this year except Dec.
7. Is this a bug? Any ideas how to resolve it please?"

Member mkae was able to independently validate this problem existence. We therefore agreed it should be posted as a bug, to this site, which i have now hereby done. 

I do hope that somebody knowledgeable will be able to expeditiously find & fix the fault, so that these reports work properly.

Thanks. Steffie.
Comment 1 Cristian Oneț 2014-07-28 14:52:07 UTC
It seems like it's a bug. It would be easier to solve it if a test file is attached since the setup seems pretty complicated.
Comment 2 Cristian Oneț 2014-07-28 15:10:01 UTC
*** Bug 299910 has been marked as a duplicate of this bug. ***
Comment 3 kdemeoz 2014-07-29 08:35:09 UTC
Created attachment 88008 [details]
attachment-12501-0.html

Hi Cristian

Re your "/if a test file is attached/", is that a request for me to 
supply something? If so, pls note that the Anonymous File i recently 
supplied for another problem with which you very recently helped me 
["/Investment View" Post - Anonymised file wrt Investment acc't that 
won't Close/.], comes from the same KMM database ... if you can use that 
at all here?

Steffie.

On 29/07/14 00:52, Cristian Oneț wrote:
> Cristian OneÈ› <mailto:onet.cristian@gmail.com> changed bug 295239 
> <https://bugs.kde.org/show_bug.cgi?id=295239>
> What 	Removed 	Added
> CC 		onet.cristian@gmail.com
>
> *Comment # 1 <https://bugs.kde.org/show_bug.cgi?id=295239#c1> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> It seems like it's a bug. It would be easier to solve it if a test file is
> attached since the setup seems pretty complicated.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 4 Cristian Oneț 2014-07-29 08:38:55 UTC
OK, I'll try to reproduce this with that file. All I need to do is open “Income and Expenses Forecast This Year” and see that it's wrong?
Comment 5 kdemeoz 2014-07-29 11:00:28 UTC
Created attachment 88012 [details]
attachment-18686-0.html

Cristian

I'd not retried those faulty KMM functions [“/*Forecast By Month” 
[Income & Expenses]*/" & “/*Income and Expenses Forecast This Year*/” 
reports] for a couple of years, since i discovered the error. However 
i've just tried them again now in preparing this reply [updated to the 
current year]. Note that in March 2012 i was using KMM v4.6.2 [KDE 
4.8.00, Win7]. I'm now using KMM v4.6.4 [KDE 4.13.2, Linux Mint 17 Qiana 
KDE] via Synaptic. Hence i thought there might be a small chance that 
the fault was fixed.

Unfortunately ... no. The malfunction still occurs unchanged in both 
these reports, exactly as i described in my original Post... ".../*the 
output is demonstrably wrong. Specifically it omits not all, but *most*, 
of the scheduled Income & Expenses items. Here’s a representative 
example: my salary is scheduled Monthly, but both these “Forecast” 
Reports simply show “$0” for each month this year except Dec*/".

Steffie.

On 29/07/14 18:38, Cristian Oneț wrote:
>
> *Comment # 4 <https://bugs.kde.org/show_bug.cgi?id=295239#c4> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> OK, I'll try to reproduce this with that file. All I need to do is open “Income
> and Expenses Forecast This Year†and see that it's wrong?
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 6 Cristian Oneț 2014-07-29 11:04:21 UTC
OK, thanks for reproducing this, I will take a look at it.
Comment 7 Cristian Oneț 2014-07-30 12:34:47 UTC
Created attachment 88026 [details]
Testfile for this issue.

Since the anonymous file contained too many schedules and the balances were pretty big numbers thus making this hard to follow I decided to start with a new file, one account and two schedules. It looks like "Forecast By Month" shows correct values and only "Income and Expenses Forecast This & Next Year" (custom report) seems to miss scheduled transactions.
Comment 8 Cristian Oneț 2014-07-30 12:42:29 UTC
Created attachment 88027 [details]
Unencrypted testfile.

Since the anonymous file contained too many schedules and the balances were pretty big numbers thus making this hard to follow I decided to start with a new file, one account and two schedules. It looks like "Forecast By Month" shows correct values and only "Income and Expenses Forecast This & Next Year" (custom report) seems to miss scheduled transactions.
Comment 9 Cristian Oneț 2014-07-30 13:08:18 UTC
By looking at the code it seems that the issue is in PivotTable::calculateForecast which seems to setup the budget forecast in a different way than KForecastView::loadBudgetView (which gives correct results).
Comment 10 kdemeoz 2014-07-31 06:02:12 UTC
Created attachment 88046 [details]
attachment-24004-0.html

Cristian

Your result disturbs me; it is conspicuously different to my own 
experience on my actual KMM data file, both originally in 2012 but also 
again recently when i reconfirmed. I have just looked once more at my 
report "/Forecast By Month; Income & Expenses (2014)"/ ... 100% for 
certain, it is wrong [as is also / still "/Income and Expenses Forecast 
This Year (2014//)/"]; omitting a *large* number of my scheduled 
transactions.

Steffie.

On 30/07/14 22:42, Cristian Oneț wrote:
>
> *Comment # 8 <https://bugs.kde.org/show_bug.cgi?id=295239#c8> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> Createdattachment 88027  <attachment.cgi?id=88027>  [details]  <attachment.cgi?id=88027&action=edit>
> Unencrypted testfile.
>
> Since the anonymous file contained too many schedules and the balances were
> pretty big numbers thus making this hard to follow I decided to start with a
> new file, one account and two schedules. It looks like "Forecast By Month"
> shows correct values and only "Income and Expenses Forecast This & Next Year"
> (custom report) seems to miss scheduled transactions.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 11 Cristian Oneț 2014-07-31 06:27:28 UTC
When you say "Forecast By Month; Income & Expenses (2014)" you are talking about a report showing the categories? I'm asking because the standard "Forecast By Month" report is a report containing the assets/liabilities which works as expected as far as I can see. If your "Forecast By Month; Income & Expenses (2014)" is indeed a report containing income and expense accounts (as it's name suggests) then it is expected that it's broken as it should be the same report as "Income and Expenses Forecast This Year", which I also confirmed as broken.
Comment 12 kdemeoz 2014-07-31 08:10:41 UTC
Created attachment 88048 [details]
attachment-27580-0.html

OK, to clarify.

 1. My Custom Report "Forecast By Month; Income & Expenses (2014)" is
    based on the KMM template report "Forecast By Month".
 2. These are my customisations:
      * "Report" tab - selected "Convert to base currency" & "Mark as
        favourite report". Report name = "Forecast By Month; Income &
        Expenses (2014)". Comment = "WHY is it ignoring so many [most]
        scheduled transactions???".
      * "Rows/Columns" tab - Monthly, Income & Expenses, All, Include
        scheduled transactions, Include transfers.
      * "Chart" tab - Line, Show grid lines, Draw values on chart, Line
        width 1.
      * "Text" tab - no changes.
      * "Account" tab - all are selected, ie, 9 Asset & 3 Liability.
      * "Date" tab - Current year; 01/01/2014 - 31/12/2014.
      * "Amount" tab - no changes.
      * "Category" tab - all are selected [520]
      * "Payee" tab - all are selected [430]
      * "Details" tab - All types, All states, Any transaction.
 3. "File information" says:
      * Transactions = 6153
      * Splits = 14,244.
      * Schedules = 105.
      * Prices = 255.


Steffie.

On 31/07/14 16:27, Cristian Oneț wrote:
>
> *Comment # 11 <https://bugs.kde.org/show_bug.cgi?id=295239#c11> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> When you say "Forecast By Month; Income & Expenses (2014)" you are talking
> about a report showing the categories? I'm asking because the standard
> "Forecast By Month" report is a report containing the assets/liabilities which
> works as expected as far as I can see. If your "Forecast By Month; Income &
> Expenses (2014)" is indeed a report containing income and expense accounts (as
> it's name suggests) then it is expected that it's broken as it should be the
> same report as "Income and Expenses Forecast This Year", which I also confirmed
> as broken.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 13 Cristian Oneț 2014-08-22 05:48:17 UTC
Git commit 0ae72000bdf8e4a256fb7940c02eb56d56609e3e by Cristian Oneț.
Committed on 22/08/2014 at 04:46.
Pushed by conet into branch 'master'.

Fix the forecast income and expenses reports.

The problem was that when the forecasted balance of a month was
requested the last day of the month was used instead of the first
day as MyMoneyForecast::calculateScheduledMonthlyBalances() sets
these balances on the first day.

This also implies that this kind of report can only have monthly
columns to be able to display valid data because of the structure
of the MyMoneyForecast object used. This is enforced by the reports
configuration UI.

M  +14   -2    kmymoney/dialogs/kreportconfigurationfilterdlg.cpp
M  +1    -0    kmymoney/dialogs/kreportconfigurationfilterdlg.h
M  +4    -7    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/0ae72000bdf8e4a256fb7940c02eb56d56609e3e
Comment 14 Cristian Oneț 2014-08-22 05:50:00 UTC
Git commit 8d026766f333f1c810e224702d380e44fdd5119c by Cristian Oneț.
Committed on 22/08/2014 at 04:46.
Pushed by conet into branch 'frameworks'.

Fix the forecast income and expenses reports.

The problem was that when the forecasted balance of a month was
requested the last day of the month was used instead of the first
day as MyMoneyForecast::calculateScheduledMonthlyBalances() sets
these balances on the first day.

This also implies that this kind of report can only have monthly
columns to be able to display valid data because of the structure
of the MyMoneyForecast object used. This is enforced by the reports
configuration UI.
(cherry picked from commit 0ae72000bdf8e4a256fb7940c02eb56d56609e3e)

M  +14   -2    kmymoney/dialogs/kreportconfigurationfilterdlg.cpp
M  +1    -0    kmymoney/dialogs/kreportconfigurationfilterdlg.h
M  +4    -7    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/8d026766f333f1c810e224702d380e44fdd5119c
Comment 15 kdemeoz 2014-08-23 02:14:39 UTC
Created attachment 88380 [details]
attachment-19849-0.html

Hi Cristian

Sorry but i'm a bit confused by this msg. Is it saying that there's not 
actually a problem in these KMM reports but i was misusing them... or is 
it confirming there is a fault & that it needs to be fixed ... or is it 
confirming there is a fault & that it is fixed?

Steffie.


On 22/08/14 15:50, Cristian Oneț wrote:
> Cristian OneÈ› <mailto:onet.cristian@gmail.com> changed bug 295239 
> <https://bugs.kde.org/show_bug.cgi?id=295239>
> What 	Removed 	Added
> Latest Commit 
> http://commits.kde.org/kmymoney/0ae72000bdf8e4a256fb7940c02eb56d56609e3e 
> 	http://commits.kde.org/kmymoney/8d026766f333f1c810e224702d380e44fdd5119c
>
> *Comment # 14 <https://bugs.kde.org/show_bug.cgi?id=295239#c14> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> Git commit 8d026766f333f1c810e224702d380e44fdd5119c by Cristian OneÈ›.
> Committed on 22/08/2014 at 04:46.
> Pushed by conet into branch 'frameworks'.
>
> Fix the forecast income and expenses reports.
>
> The problem was that when the forecasted balance of a month was
> requested the last day of the month was used instead of the first
> day as MyMoneyForecast::calculateScheduledMonthlyBalances() sets
> these balances on the first day.
>
> This also implies that this kind of report can only have monthly
> columns to be able to display valid data because of the structure
> of the MyMoneyForecast object used. This is enforced by the reports
> configuration UI.
> (cherry picked from commit 0ae72000bdf8e4a256fb7940c02eb56d56609e3e)
>
> M  +14   -2    kmymoney/dialogs/kreportconfigurationfilterdlg.cpp
> M  +1    -0    kmymoney/dialogs/kreportconfigurationfilterdlg.h
> M  +4    -7    kmymoney/reports/pivottable.cpp
>
> http://commits.kde.org/kmymoney/8d026766f333f1c810e224702d380e44fdd5119c
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 16 Cristian Oneț 2014-08-23 07:34:08 UTC
It was a bug that was fixed. It was not you that misused the forecast but the reports code which was fixed.
Comment 17 kdemeoz 2014-08-23 07:51:47 UTC
Created attachment 88384 [details]
attachment-25918-0.html

That's good news. However the follow-up query then is... what does 
"fixed" mean for a general public end-user [like me]? I'm still using 
v4.6.4 in both Win & Linux, so i assume i need to wait for v4.6.5+ to be 
released?

On 23/08/14 17:34, Cristian Oneț wrote:
>
> *Comment # 16 <https://bugs.kde.org/show_bug.cgi?id=295239#c16> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> It was a bug that was fixed. It was not you that misused the forecast but the
> reports code which was fixed.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 18 Cristian Oneț 2014-08-23 08:02:03 UTC
You have to wait for the next release packaged for your system, that is if you can't build from source. KMyMoney will be released in October https://techbase.kde.org/Projects/KMyMoney#Version_4.7.0
Comment 19 kdemeoz 2014-08-23 08:20:37 UTC
Created attachment 88385 [details]
attachment-26769-0.html

Cool, thanks.

On 23/08/14 18:02, Cristian Oneț wrote:
>
> *Comment # 18 <https://bugs.kde.org/show_bug.cgi?id=295239#c18> on bug 
> 295239 <https://bugs.kde.org/show_bug.cgi?id=295239> from Cristian 
> OneÈ› <mailto:onet.cristian@gmail.com> *
> You have to wait for the next release packaged for your system, that is if you
> can't build from source. KMyMoney will be released in October
> https://techbase.kde.org/Projects/KMyMoney#Version_4.7.0
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 20 Cristian Oneț 2014-09-01 18:00:36 UTC
Git commit 90cedbfb61e63a1ac0e8b675ccb6d18799a2d554 by Cristian Oneț.
Committed on 01/09/2014 at 17:55.
Pushed by conet into branch 'master'.

Fix the net worth report which was adding liabilities incorrectly.

I just noticed today that this was broken. The fix for this bug broke
it. The total should be computed differently for income and expense
vs. assets and liabilities forecast reports. I restored the old
condition and added a special condition to check only income and
expense forecast reports.

Alvaro if you have a better fix for this feel free to do it.

M  +6    -2    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/90cedbfb61e63a1ac0e8b675ccb6d18799a2d554
Comment 21 Cristian Oneț 2014-09-01 18:01:14 UTC
Git commit 77bab41dc973e4e21115133a5823a436f7347c53 by Cristian Oneț.
Committed on 01/09/2014 at 17:55.
Pushed by conet into branch 'frameworks'.

Fix the net worth report which was adding liabilities incorrectly.

I just noticed today that this was broken. The fix for this bug broke
it. The total should be computed differently for income and expense
vs. assets and liabilities forecast reports. I restored the old
condition and added a special condition to check only income and
expense forecast reports.

Alvaro if you have a better fix for this feel free to do it.
(cherry picked from commit 90cedbfb61e63a1ac0e8b675ccb6d18799a2d554)

M  +6    -2    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/77bab41dc973e4e21115133a5823a436f7347c53
Comment 22 Cristian Oneț 2014-09-06 04:12:04 UTC
*** Bug 338836 has been marked as a duplicate of this bug. ***
Comment 23 Christian David 2014-09-24 19:31:01 UTC
Git commit e80cb939dd460d3b461d6a7462f82f92c1c1fcc3 by Christian Dávid, on behalf of Cristian Oneț.
Committed on 22/08/2014 at 04:46.
Pushed by christiand into branch 'add-onlinebanking'.

Fix the forecast income and expenses reports.

The problem was that when the forecasted balance of a month was
requested the last day of the month was used instead of the first
day as MyMoneyForecast::calculateScheduledMonthlyBalances() sets
these balances on the first day.

This also implies that this kind of report can only have monthly
columns to be able to display valid data because of the structure
of the MyMoneyForecast object used. This is enforced by the reports
configuration UI.

M  +14   -2    kmymoney/dialogs/kreportconfigurationfilterdlg.cpp
M  +1    -0    kmymoney/dialogs/kreportconfigurationfilterdlg.h
M  +4    -7    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/e80cb939dd460d3b461d6a7462f82f92c1c1fcc3
Comment 24 Christian David 2014-09-24 19:43:47 UTC
Git commit 7fa63c79095ebae4885f6d01249ee18b04d012b8 by Christian Dávid, on behalf of Cristian Oneț.
Committed on 01/09/2014 at 17:55.
Pushed by christiand into branch 'add-onlinebanking'.

Fix the net worth report which was adding liabilities incorrectly.

I just noticed today that this was broken. The fix for this bug broke
it. The total should be computed differently for income and expense
vs. assets and liabilities forecast reports. I restored the old
condition and added a special condition to check only income and
expense forecast reports.

Alvaro if you have a better fix for this feel free to do it.

M  +6    -2    kmymoney/reports/pivottable.cpp

http://commits.kde.org/kmymoney/7fa63c79095ebae4885f6d01249ee18b04d012b8